# dev_no_ide

./: .gitignore  CMakeLists.txt  Kconfig  README.md  STM32G474RETX_FLASH.ld  main.h  openocd.cfg  prj.conf  toolchain.cmake
cmake/: exdefinition.cmake  extensions.cmake  kconfig.cmake
scripts/kconfig/: diffconfig  kconfig.py
src/: main.c  main.h
src/app/: CMakeLists.txt  led.c  led.h
src/driver/: CMakeLists.txt  drv_config.h  drv_gpio.c  drv_gpio.h  drv_sysclock.c  drv_usart.c  drv_usart.h
src/kernel/: CMakeLists.txt  init.c  init.h
src/service/: CMakeLists.txt  queue.h
src/tk_boot/: CMakeLists.txt  Kconfig  test_boot.c  tk_boot_config.h
src/tk_boot/boot_f1/: CMakeLists.txt  test_boot_f1.c  test_boot_f1.h
src/tk_boot/boot_f2/: CMakeLists.txt  test_boot_f2.c  test_boot_f2.h
src/tk_log/: Kconfig  README.md  SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c  ignore.h  tk_log.c  tk_log.h  tk_log_config.h
src/tool_chain/: gcc_def.h
stm32g4_ll/: CMakeLists.txt
stm32g4_ll/CMSIS/Device/ST/STM32G4xx/Include/: stm32g4xx.h
tk_boot/: test_boot.c  test_boot.h
tk_boot/boot_f1/: CMakeLists.txt  test_boot_f1.c  test_boot_f1.h
tk_boot/boot_f2/: CMakeLists.txt  test_boot_f2.c  test_boot_f2.h
tk_log/: CMakeLists.txt  README.md  SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c  ignore.h  tk_log.c  tk_log.h  tk_log_config.h
